ADM-442 update classification and classification test